Remove unwanted files

--- a/src/app/layout/extras/templates/extras.component.html
+++ b/src/app/layout/extras/templates/extras.component.html
@@ -1,3 +1,19 @@
 <div [@routerTransition]>
     <app-page-header [heading]="'Extras'" [icon]="'fa-line-chart'"></app-page-header>
+    <div class="box">
+        <accordion>
+            <accordion-group class="top-margin-5" heading="Programming Languages" [isOpen]="false" >
+            </accordion-group>
+            <accordion-group class="top-margin-5" heading="Markup Languages" >
+            </accordion-group>
+            <accordion-group class="top-margin-5" heading="Operating Systems Used" >
+            </accordion-group>
+            <accordion-group class="top-margin-5" heading="Known Databases" >
+            </accordion-group>
+            <accordion-group class="top-margin-5" heading="Frameworks" >
+            </accordion-group>
+            <accordion-group class="top-margin-5" heading="Content Management Systems" >
+            </accordion-group>
+        </accordion>
+    </div>
 </div>
